# oumi

./: "unclosed  .gitignore  .license_header.txt  .pre-commit-config.yaml  ANTHROPIC_ENHANCEMENTS_SUMMARY.md  CITATION.cff  CLAUDE.1.md  CLAUDE.md  CODEBASE_EXPLAINED.md  CODEBASE_LINE_BY_LINE.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_COMMANDS.md  MEGATRON_FULL_TEST_RESULTS.md  MEGATRON_IMPLEMENTATION_SUMMARY.md  MEGATRON_QUICK_START.md  MEGATRON_TEST_REPORT.md  Makefile  PROFILING.md  QUANTIZATION_CLEANUP_SUMMARY.md  README.md  STYLE_GUIDE.md  TERMINAL_UI.md  USAGE.md  analysis_report.md  analyze_impl.md  analyzers_status.md  benchmark_qwen.py  benchmark_results.json  blog_post_v0.5.md  branch_test_validation.py  cli_plan.md  codecov.yml  codex_plan.md  compare_models.py  conversation_main_2025-08-31_21-25-10.json  data_quality_improvements.md  dataset_viewer.html  (+66 more)
.claude/: settings.json  settings.local.json
.github/: dependabot.yml  pull_request_template.md
analysis_output/: analysis_report.html  analysis_summary.json  message_analysis.csv
analyze_curate_notebooks/: ada_analyze.ipynb  alpaca_test_v2.ipynb  banking77.ipynb  banking77_analyze.ipynb  banking77_analyze_all.ipynb  banking77_dedup_emb.ipynb  banking77_deita.ipynb  banking77_evol_instruct.ipynb  banking77_final.ipynb  banking77_fixing_it_in_post.ipynb  banking77_llm_ instruction_quality.ipynb  banking77_llm_conversation_coherence.ipynb  banking77_llm_factuality.ipynb  banking77_llm_helpfulness.ipynb  banking77_llm_instruction_quality.ipynb  banking77_llm_judge.ipynb  banking77_llm_response_quality.ipynb  banking77_llm_safety.ipynb  dmg_analyze.ipynb  openassistant_analyze.ipynb  ultrachat_analyze.ipynb
benchmarks/: README.md  compare_benchmarks.py  dataset_microbenchmarks.py  dataset_pipeline_benchmark.py  microbenchmark_baseline.txt  microbenchmark_optimized.txt  pipeline_benchmark_baseline.txt  pipeline_benchmark_optimized.txt  profile_pipeline.py
config_health/: pyproject.toml
config_health/config_health/: __init__.py  __main__.py  cli.py
config_health/config_health/ci/: check.py
config_health/config_health/core/: auto_fix.py  classifier.py  coverage.py  dry_run.py  enrichment.py  hub_checker.py  models.py  optimizer.py  report_diff.py  scaffolder.py  scanner.py  static_checks.py  tier0_checks.py  vram_estimator.py
config_health/config_health/scaffolds/: evaluation.yaml.j2  inference.yaml.j2  job.yaml.j2  training.yaml.j2
config_health/config_health/ui/: server.py
config_health/config_health/ui/static/: styles.css
config_health/config_health/ui/templates/: base.html  config_detail.html  coverage.html  dashboard.html  scaffold.html
config_health/config_health/ui/templates/partials/: config_list.html  scaffold_result.html
configs/: phi3.dpo.mac.32g.yaml  phi3.dpo.yaml  sky.yaml  test_megatron_smollm.yaml
data/: analysis_results.json  curated_dataset.jsonl  duplicates.json  recommendations.json  test_dataset.jsonl
dmg_configs/: synth_config.yaml
docs/: .gitignore  DATASET_DEFINITION.md  DEV_SETUP.md  DISTRIBUTED_TRAINING.md  GIT_WORKFLOW.md  MEGATRON_INTEGRATION.md  MODEL_DEFINITION.md  NEW_MULTIMODAL_DATASET.md  _doc_links.txt  _doclinks.config  _docsummaries.sh  _summarize_config.py  _summarize_module.py  citations.bib  conf.py  copy_docfiles.py  evold.md  index.md  index.rst  mca_learnings.md  oumi_history_schema.md  quantization_guide.md  workflow.md
enterprise_experiments/: .py  README.md  analyze_config.yaml  analyze_dataset.ipynb  custom_helpfulness_judge.md  data_prep.py  download_data.py  eval.py  evaluations.ipynb  run.py  run.sh  train.sh  train2.sh  train3.sh  train_openthoughts.sh
examples/: analyzer_config_example.py  analyzer_config_plugin.yaml  analyzer_config_v1_example.py  analyzer_demo.py  conversation_level_analysis.py  conversation_tokenization_analysis.py  dataframe_demo.py  dataset_analyzer_with_tokenizer.py  extended_dataset_analyzer.py  length_analyzer_with_tokenizer.py  simple_tokenization_demo.py  tokenize_conversations.py
fixed/: 001_special_tokens_mixin_removed.md  002_auto_model_for_vision2seq_renamed.md  003_include_tokens_per_second_removed.md  004_processor_apply_chat_template_expects_dicts.md  005_pretrained_tokenizer_init_required.md  006_trl_dpo_column_names_changed.md  007_trl_gkd_trainer_removed.md  008_trl_kto_max_prompt_length_removed.md  009_phi3_tokenization_whitespace_change.md  010_vlm_inference_output_changed.md  011_pyproject_dependency_updates.md  012_vllm_guided_decoding_renamed.md  013_vllm_set_tokenizer_removed.md  014_vllm_pyproject_version_update.md  015_qwen3_vl_mm_token_type_ids.md  016_extra_special_tokens_v5_v4_incompatibility.md  018_max_grad_norm_null_breaks_transformers_v5.md  019_numpy_int64_custom_models.md  020_tune_multi_objective_missing_metric.md  021_hf_vision_missing_required_kwargs.md  022_multimodal_open_r1_wrong_split.md  023_phi3_vision_trust_remote_code.md  024_magpie_pro_1m_timeout.md  026_dataset_trust_remote.md  027_use_cache.md  (+2 more)
src/oumi-chat/: README.md  pyproject.toml
src/oumi-chat/oumi_chat/: __init__.py  style_params.py  utils.py
src/oumi-chat/oumi_chat/attachments/: __init__.py  context_manager.py
src/oumi-chat/oumi_chat/cli/: __init__.py  chat.py
src/oumi-chat/oumi_chat/commands/: __init__.py  base_handler.py  command_context.py  command_parser.py  command_registry.py  command_router.py  decorators.py
src/oumi-chat/oumi_chat/commands/handlers/: attachment_handler.py  basic_commands.py  branch_operations_handler.py  file_operations_handler.py  import_export_handler.py  model_management_handler.py  web_shell_handler.py
src/oumi-chat/oumi_chat/commands/utilities/: import_utilities.py
src/oumi-chat/oumi_chat/configs/: 3n_e4b_it_gguf_macos_monokai_infer.yaml
src/oumi-chat/oumi_chat/input/: __init__.py
src/oumi-chat/oumi_chat/monitoring/: __init__.py
src/oumi-chat/oumi_chat/thinking/: thinking_processor.py
src/oumi-chat/oumi_chat/utils/: __init__.py  conversation_renderer.py  file_validation.py  model_info.py  token_counter.py
(+4404 files in other folders)
