[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
oumi = ["LICENSE", "README.md", "*.jinja"]

[tool.setuptools_scm]
# default scm config.

[tool.setuptools]
# default setuptools config.

# We currently use the Omegaconf dev version, and uv doesn't allow pre-release versions
# by default. "if-necessary-or-explicit" permits pre-releases when a package is
# explicitly pinned to one (e.g. omegaconf==2.4.0.dev4) or when no stable release
# satisfies the requirement (e.g. opentelemetry-semantic-conventions, which only
# ships beta versions on PyPI).
[tool.uv]
prerelease = "if-necessary-or-explicit"
# The previous override `transformers>=5.5,<5.8` lived here as a workaround.
# Users now opt into a transformers regime via the tf4 / tf5 extras
# (see [project.optional-dependencies]); a global override would conflict with
# the tf4 path. Re-add a narrow override here only if a specific dependency
# starts pulling an incompatible range during dev installs.

# CUDA wheel index routing for the `cudaNNN` extras in
# [project.optional-dependencies]. Each index is `explicit = true` so uv only
# consults it when an extra activates the corresponding source rule below.
# uv-only: plain `pip` ignores [tool.uv.sources]. See installation.md.
# Note: cu124 is intentionally omitted — pytorch stopped publishing cu124
# wheels after torch 2.6, so a `cuda124` extra would not resolve with the
# `torch29` stack. CUDA 12.2/12.4 drivers should use the `cuda126` extra
# (cu126 wheels are forward-compatible).
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", extra = "cuda126" },
    { index = "pytorch-cu128", extra = "cuda128" },
    { index = "pytorch-cu129", extra = "cuda129" },
]
torchvision = [
    { index = "pytorch-cu126", extra = "cuda126" },
    { index = "pytorch-cu128", extra = "cuda128" },
    { index = "pytorch-cu129", extra = "cuda129" },
]
# torchao is NOT routed — its abi3 wheels live on PyPI, and the cu12X
# indexes don't host torchao for every minor.

[project]
name = "oumi"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10,<3.15"
description = "Oumi - Modeling Platform"
authors = [{ name = "Oumi Team", email = "contact@oumi.ai" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "accelerate>=1.10.0,<2.0",
    "aiohttp>=3.12,<3.16",        # Used by inference engine
    "aiofiles>=24.1.0,<26",       # Allows to use async file operations
    "aioresponses>=0.7,<0.8",     # User by inference engine tests
    "backoff>=2.2.1,<2.3",
    "click<8.4.0",                # Used by CLI. 8.2.0 is currently unsupported by Typer.
    "datasets>=3.2,<4.8.6",
    "greenlet",                   # Required by skypilot 0.11+ (sqlalchemy asyncio)
    "hdrhistogram>=0.10,<0.11",
    "httpx>=0.27,<1.0",           # Used by deploy module (async HTTP client)
    "jsonlines",
    "jsonschema>=4.0,<5.0",       # Used for tool argument validation
    "lm_eval[wandb]>=0.4,<0.5.0",
    "mlflow>=3.1",                # >=3.1.4 requires Python3.10>=
    "numpy>=1.26,<2.4",           # verl==0.5.0 depends on numpy<2.0.0
    # The latest stable version, 2.3.0, is two years old and is causing dependency
    # conflicts. We'll use the dev version until a new stable version is released.
    # See https://github.com/oumi-ai/oumi/issues/1377
    # We pin the exact dev version so that the --pre flag isn't needed for uv pip install.
    "omegaconf==2.4.0.dev4",
    "packaging",
    "pandas>=2.3,<3",
    "peft>=0.17,<0.20",
    "pexpect>=4.9,<4.10",      # Used by Polaris client
    "posthog>=7.0,<8.0",
    "pillow>=11.3,<12.3",      # Used by image datasets
    "protobuf>=6.32",
    "pycares<6.0.0",
    "pydantic>=2.11,<2.14",
    "requests>=2.31,<3.0",        # Used by deploy module (GCS upload)
    "responses>=0.25,<0.27",
    "safetensors>=0.6,<0.8",
    "skypilot>=0.11.1,<0.13", # 0.11.1 includes db locking fix
    "tensorboard>=2.20,<2.21", # Optional, for monitoring training
    "tiktoken>=0.7,<1.0",
    "torch>=2.6,<2.11.0",      # vllm only supports up to torch==2.7
    "torchao>=0.16,<0.17",     # Used by transformers; >=0.16 required by peft>=0.19
    "torchvision>=0.21,<0.26", # Used by some VLM-s (multimodal)
    "tqdm",
    "transformers>=4.57,<5.9",
    "trl>=0.24,<1.5",
    "typer<0.25.2",             # Used by CLI. Pinned due to sphinxcontrib-typer compatibility. OPE-1806
    "typing_extensions",        # Backports of typing updates
    "uvicorn<0.47.0",           # TODO: Remove on resolution of https://github.com/skypilot-org/skypilot/issues/7303
    "wandb>=0.21,<0.26",        # Logging to Weights and Biases.
]

[project.urls]
Homepage = "https://github.com/oumi-ai/oumi"
Issues = "https://github.com/oumi-ai/oumi/issues"

[project.optional-dependencies]
dev = [
    "ipykernel",
    "ipywidgets",     # Interactive widgets for Jupyter notebooks
    "jupyterlab",
    "nbconvert",      # For notebook execution in tests
    "nbformat",       # For notebook execution in tests
    "pre-commit",
    "pyright",
    "pytest-asyncio", # Asyncio plugin for pytest
    "pytest-cov",     # Test coverage plugin for pytest
    "pytest-timeout", # Timeout plugin for pytest
    "pytest",
    "responses",
    "ruff",
    "torchfix",       # Tool for automatically fixing common PyTorch issues
]
docs = [
    "myst_parser",           # Allows us to write docs in markdown
    "myst-nb",               # Allows us to include ipython notebooks in the docs
    "sphinx-book-theme",     # Theme for Sphinx docs
    "sphinx-copybutton",     # Add copy button to code blocks in Sphinx
    "sphinx-design",         # Allows us to include tabs in the docs
    "sphinx",                # Used to build the docs
    "sphinxcontrib-bibtex",  # Allows us to cite bibtex references in the docs
    "sphinxcontrib-mermaid", # Enable mermaid diagrams in the docs
    "sphinxcontrib-typer",   # Allows us to include typer CLI in the docs
]

# Useful dependencies when running on GPU
gpu = [
    "liger-kernel>=0.6,<0.9",
    "nvidia-ml-py>=13.580,<13.596",
    "bitsandbytes>=0.47,<0.50",     # Used for QLora, and PagedAdam implementation
    # When updating verl version, make sure to also update the default config:
    # src/oumi/core/trainers/verl_trainer_config.yaml.
    "verl>=0.5,<0.8; python_version >= '3.10'", # Used for the VERL_GRPO trainer
    "vllm>=0.14,<0.21",                         # For VLLMInferenceEngine, and vLLM-powered GRPO training.
    "kernels>=0.11,<0.15",                      # For compute kernel implementations (e.g., attn_implementation in gold trainer)
]

deepspeed = [
    # Note: May require nvcc (CUDA compiler) if no pre-built wheel is available.
    "deepspeed>=0.17.0,<0.20.0",
]

# --- Targeted "stack" extras ---
# The base dependency bands are intentionally wide for compatibility, but
# `uv pip compile` shows only a narrow corner of those bands resolves today:
#   - vllm 0.14-0.19 requires transformers <5 AND torchvision 0.24-0.25
#     (so torch 2.9 or 2.10 only).
#   - vllm 0.20 requires torchvision 0.26 (torch 2.11+, outside the base
#     band).
#   - No vllm version currently in band pairs with transformers v5.
# These extras pin to one of the *actually-resolving* corners so users get a
# reproducible install instead of a silent narrow corner. Re-evaluate when
# the upstream wheel matrix changes.

# torchao pairing convention. torchao publishes abi3 wheels and has no hard
# torch dependency in its PyPI metadata, so this is a recommended pairing
# rather than an enforced one. Each torchNN extra below pins torchao to the
# minor that ships alongside that torch release:
#   torch 2.8  -> torchao 0.15
#   torch 2.9  -> torchao 0.16  (current stack)
#   torch 2.10 -> torchao 0.17
# Update when a new torchao minor lands and a new torchNN extra is added.

# Stable GPU stack: transformers v4 + TRL <0.27 + vLLM 0.14 + torch 2.9.
# Pulls the full GPU extra (vllm, liger-kernel, bitsandbytes, kernels, verl).
# Combine with a `cudaNNN` extra (uv only) to route torch to the matching
# CUDA wheel index, plus `dev`/`docs`/cloud extras as needed.
# Example: `uv pip install "oumi[torch29,tf4,cuda128]"`
torch29 = [
    "oumi[gpu]",
    "torch>=2.9,<2.10",
    "torchvision>=0.24,<0.25",
    "torchao>=0.16,<0.17",
]
tf4 = [
    "transformers>=4.57,<5.0",
    "trl>=0.24,<0.27",
    "peft>=0.17,<0.19",
]

# CPU-only transformers v5 stack: for development, evaluation, or non-vLLM
# inference on transformers v5 (which no current vLLM release supports).
# Does NOT pull `gpu` — use `oumi[gpu]` separately only when an in-band vLLM
# release adds transformers v5 support.
# Example: `pip install "oumi[tf5]"`
tf5 = [
    "transformers>=5.5,<5.9",
    "trl>=0.27,<1.5",
    "peft>=0.17,<0.20",
]

# CUDA-anchored extras (uv only). Compose with `torch29,tf4`:
#   uv pip install "oumi[torch29,tf4,cuda128]"
# uv requires the routed packages (`torch`, `torchvision`) to appear in the
# extra; the version intersection with `torch29`'s pins is what the resolver
# uses, and [tool.uv.sources] above routes them to the matching pytorch
# wheel index. Plain `pip` ignores [tool.uv.sources], so pip users must pass
# `--index-url` manually; see docs/get_started/installation.md.
# CUDA 12.2 / 12.3 / 12.4 / 12.5 drivers: use `cuda126` (forward-compatible
# via CUDA enhanced compatibility; pytorch dropped cu124 wheels after torch
# 2.6).
cuda126 = ["torch", "torchvision"]
cuda128 = ["torch", "torchvision"]
cuda129 = ["torch", "torchvision"]

# Targets for supported cloud providers
aws = ["skypilot[aws]"]
azure = ["skypilot[azure]"]
gcp = [
    "google-api-core>=2.25",
    "google-api-python-client",
    "google-auth>=2.40",
    "google-cloud-core>=2.4",
    "google-cloud-storage>=3.3",
    "skypilot[gcp]",
]
kubernetes = ["skypilot[kubernetes]"]
lambda = ["skypilot[lambda]"]
runpod = ["skypilot[runpod]"]
nebius = ["skypilot[nebius]"]

synthesis = [
    "pdftext>=0.6.3; python_version >= '3.10'", # Document ingestion for synthesis
    "python-docx>=1.1.0",  # DOCX document ingestion for synthesis
    "openpyxl>=3.1.0",  # Excel engine for pandas
]

# Flash Attention - separate group due to special installation requirements
flash_attn = [
    # Note: May require manual installation with: pip install flash-attn --no-build-isolation
    # This is kept separate to avoid breaking existing environments
    "flash-attn>=2.0.0",
]

evaluation = [
    "langdetect",                                      # leaderboard_ifeval
    "immutabledict",                                   # leaderboard_ifeval
    "nltk>=3.9",                                       # leaderboard_ifeval
    "antlr4-python3-runtime==4.13.2",                  # leaderboard_math_hard
    "sympy>=1.14",                                     # leaderboard_math_hard
    "sentencepiece>=0.2.0",
]

quantization = ["autoawq>=0.2,<0.3", "bitsandbytes>=0.47,<0.50"]

tune = ["optuna>=4.0.0,<5.0"]

bitnet = ["onebitllms>=0.0.3"]

mcp = [
    "fastmcp>=3.0.0,<4",
    "httpx>=0.28.1,<1",
    "mcp>=1.25.0,<2",
]

file_formats = ["pdf2image>=1.17,<1.18"]

llama_cpp = ["llama-cpp-python>=0.3.5,<0.4"]

# torchdata provides StatefulDataLoader and DataPipes for advanced data loading
# torchdata 0.10 drops support for datapipes which we currently use
# also, torchdata does not provide a py3.13 wheel for version 0.9.0.
# if python >= 3.13, install from source for now.
torchdata = ["torchdata>=0.9,<0.10.0"]

# CI targets — exercise the recommended user stacks.
# CPU CI uses tf4 (the only transformers regime that pairs with current vLLM);
# GPU CI uses the full torch29+tf4 stack so it matches what users install.
ci_cpu = [
    "oumi[dev,docs,gcp,mcp,synthesis,tune,torchdata,file_formats,tf4]",
    "vllm>=0.14,<0.17",                            # For VLLMInferenceEngine (tf4 regime)
    "boto3",  # For bedrock inference engine tests
    # This may fail to install. As a temporary workaround, run:
    # CMAKE_ARGS="-DLLAVA_BUILD=OFF" pip install -U llama-cpp-python
    "llama-cpp-python>=0.3,<0.4", # For LlamaCppInferenceEngine
]
# llama-cpp-python is not compatible with the github
# gpu actions runner, so we skip it for now
ci_gpu = [
    "oumi[torch29,tf4,dev,docs,gcp,deepspeed,synthesis,tune,torchdata,file_formats]",
    "boto3",  # For bedrock inference engine tests
]

[project.scripts]
oumi = "oumi.cli.main:run"
oumi-mcp = "oumi.mcp.server:main"

[tool.ruff]
extend-include = [
    "*.ipynb", # Include ipython notebooks
]
line-length = 88


[tool.ruff.lint]
select = [
    "ASYNC", # flake8-async: check for async/await syntax
    "D",     # pydocstyle: check docstring style
    "E",     # pycodestyle: errors
    "F",     # pyflakes: detect various errors
    "I",     # isort: check import order
    "ICN",   # flake-8 import conventions,
    "INT",   # flake8-gettext
    "LOG",   # flake8-logging-format: check for logging format,
    "NPY",   # NumPy-specific rules
    "PD",    # pandas vet
    "PTH",   # pathlib
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise, use raise statements instead of return statements
    "TID",   # flake8-tidy-imports: check import tidiness
    "UP",    # pyupgrade: check for Python syntax updates
    "W",     # pycodestyle: warnings
]
ignore = [
    "D100",   # Missing docstring in public module, temporary, OPE-326
    "D101",   # Missing docstring in public class, temporary, OPE-326
    "NPY002", # Replace legacy numpy aliases
    "PTH123", # pathlib: `open()` should be replaced by `Path.open()`
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all" # Disallow all relative imports.

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PTH"] # Ignore docstring checks in tests
"src/oumi/mcp/*" = ["ASYNC210", "ASYNC220", "ASYNC230", "ASYNC240"]  # fastmcp uses sync-over-async patterns
"src/oumi/utils/verl_model_merger.*" = [
    "E501", # Line too long
    "D",    # Ignore docstring checks
    "PTH",  # Ignore pathlib checks
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["oumi"]
known-third-party = ["wandb"]

[tool.pyright]
include = ["src/oumi/**", "tests/**"]
exclude = [
    "src/oumi/core/types/proto/**",
    "src/oumi/utils/verl_model_merger.py",
]
typeCheckingMode = "basic"
pythonVersion = "3.10"
pythonPlatform = "All" # Include linux, mac, windows

reportPrivateImportUsage = "none"

[tool.ty.src]
include = ["src/oumi/**"]
exclude = [
    "src/oumi/core/types/proto/**",
    "src/oumi/utils/verl_model_merger.py",
]

[tool.ty.environment]
python-version = "3.10"
python-platform = "all"

[tool.ty.rules]
# Match pyright's basic mode - be lenient on complex type issues
unresolved-import = "warn"  # Many optional deps (vllm, llama_cpp, boto3, etc.)
redundant-cast = "ignore"  # Too noisy, casts are often intentional for clarity
invalid-method-override = "ignore"  # Subclasses often change param types (duck typing)
unresolved-attribute = "warn"  # Often due to dynamic types, callable attributes
invalid-argument-type = "warn"  # TypeVar constraints, generics
invalid-assignment = "warn"  # Union type narrowing
invalid-return-type = "warn"  # Generic return type issues
call-non-callable = "warn"  # Dynamic callables
unsupported-operator = "warn"  # Type narrowing limitations with isinstance
too-many-positional-arguments = "warn"  # Loose typing (Callable) doesn't capture signatures
parameter-already-assigned = "warn"  # False positives with *args/**kwargs patterns


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = ["--import-mode=prepend"]
filterwarnings = [
    # Warnings from mlflow dependency that we can't fix
    "ignore:Support for class-based `config` is deprecated.*:DeprecationWarning",
    "ignore:builtin type .* has no __module__ attribute:DeprecationWarning",
    # torchao deprecation warnings - upstream issue, will be resolved in future torchao releases
    "ignore:Importing from torchao.dtypes:DeprecationWarning",
    "ignore:Importing BlockSparseLayout from torchao.dtypes:DeprecationWarning",
    # torchdata datapipes deprecation - known limitation, pinned to <0.10
    "ignore:The 'datapipes', 'dataloader2' modules are deprecated:UserWarning",
    # Ray state API deprecation - upstream issue in vllm/ray
    "ignore:Ray state API is no longer experimental:DeprecationWarning",
    # transformers deprecation warnings - upstream, will be resolved when upgrading to v5
    "ignore:The image_processor_class argument is deprecated:FutureWarning",
    "ignore:The class `AutoModelForVision2Seq` is deprecated:FutureWarning",
    # TRL warnings - version-aware code already handles these, warnings are from TRL internals
    "ignore:To copy construct from a tensor, it is recommended to use:UserWarning",
    "ignore:The `KTOConfig` is now located in `trl.experimental`:FutureWarning",
    "ignore:The `KTOTrainer` is now located in `trl.experimental`:FutureWarning",
    "ignore:The `GKDConfig` is now located in `trl.experimental`:FutureWarning",
    "ignore:The `GKDTrainer` is now located in `trl.experimental`:FutureWarning",
    # torchao quant_api invalid escape sequence - upstream issue
    "ignore:invalid escape sequence:DeprecationWarning",
]
markers = [
    "e2e: Slow e2e integration tests",
    "e2e_eternal: Extremely slow e2e integration tests (for manual/selective runs)",
    "single_gpu: The test uses max 1 GPU (can be potentially skipped on multi-GPU machine to conserve GPU resources)",
    "multi_gpu: The test should run on a machine with multiple GPU-s",
]

[tool.coverage.run]
source = ["src/oumi"]
branch = true
omit = [
    "src/oumi/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "@abstractmethod",
    "@overload",
    "def __repr__",
]

[tool.coverage.html]
directory = "coverage_html"
