[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
oumi_chat = ["LICENSE", "README.md", "*.jinja", "macros/**/*.jinja", "configs/**/*.yaml"]

[tool.setuptools_scm]
# default scm config.

[tool.setuptools]
# default setuptools config.

[project]
name = "oumi-chat"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9,<3.13"
description = "Oumi Chat - Interactive chat interface for Oumi models"
authors = [{ name = "Oumi Team", email = "contact@oumi.ai" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "oumi>=0.1.0",  # Core oumi package
    "rich>=13.0.0",  # Terminal formatting
    "typer>=0.9.0",  # CLI framework
    "pydantic>=2.11,<2.12",  # Configuration
    "asciinema>=2.4.0",    # Terminal recording for /render() command
    "requests>=2.31.0",    # Web requests for /fetch() command
    "beautifulsoup4>=4.12.0", # HTML parsing for /fetch() command
    "reportlab>=4.0.0",  # PDF generation for /save() command
    "tiktoken>=0.5.0",  # Token counting for context management
    "jinja2>=3.0.0",  # Template engine for macros
    "prompt_toolkit>=3.0.0",  # Enhanced input handling
]

[project.urls]
Homepage = "https://github.com/oumi-ai/oumi"
Issues = "https://github.com/oumi-ai/oumi/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.1.0",
    "pre-commit",
    "ruff",
]

[tool.ruff]
extend-include = []
line-length = 88

[tool.ruff.lint]
select = [
    "D",     # pydocstyle: check docstring style
    "E",     # pycodestyle: errors
    "F",     # pyflakes: detect various errors
    "I",     # isort: check import order
]
ignore = [
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["oumi_chat", "oumi"]

[tool.pyright]
include = ["*.py"]
typeCheckingMode = "basic"
pythonVersion = "3.9"
pythonPlatform = "All"
